Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73241

[Windows 10] Qt cannot find system fonts from their new location in Windows update 1809

XMLWordPrintable

    • Windows
    • a34077ceac6a3e436328fcfb444e20111455a885 (qt/qtbase/5.12)

      Windows update 1809 introduced new location for system fonts. Previously the fonts were installed in all-users location C:\Windows\Fonts, but in Windows update 1809 the fonts are installed in user specific location C:\Users\UserName\AppData\Local\Microsoft\Windows\Fonts. Now, Qt cannot find system fonts on systems with Windows update 1809.

      Steps to reproduce:

      • Install new font
      • Query fonts with QFontDatabase::families() or use Qt's Font Sampler example.
      • The newly installed font is not on the list

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes